src/objects/Patient_Facility_Info__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Patient Facility Info</relationshipLabel>
        <relationshipName>Patient_Facility_Info</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Facility_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility ID</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Patient Facility Info</relationshipLabel>
        <relationshipName>Patient_Facility_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bb_patient_id__c</fullName>
        <externalId>true</externalId>
        <label>BB Patient ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cmd_patient_id__c</fullName>
        <externalId>true</externalId>
        <label>CMD Patient ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Patient Facility Info</label>
    <nameField>
        <label>Patient Facility Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient Facility Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>